[package]
name = "trip_planning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
loro = "0.5.1"
rmp-serde = "1.2.0"
serde = { version = "1.0.199", features = ["derive"] }
tokio = { version = "1.37.0", features = ["net", "macros", "sync", "rt-multi-thread"] }
tokio-tungstenite = "0.21.0"
